--- a/src/style.sass
+++ b/src/style.sass
@@ -6,5 +6,7 @@
 @import '../node_modules/@fortawesome/fontawesome-free/scss/v4-shims.scss'
 
 .espace-text-button
-    padding-right: 800px
+    margin-right: 835px
+.espace-input-button
+    margin-right: 750px
     
