--- a/src/style.sass
+++ b/src/style.sass
@@ -5,8 +5,9 @@
 @import '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss'
 @import '../node_modules/@fortawesome/fontawesome-free/scss/v4-shims.scss'
 
-.espace-text-button
-    margin-right: 835px
-.espace-input-button
-    margin-right: 750px
+
+a
+    border: solid 1px black
+    margin: 0 2px
+    float: right
     
