--- a/src/style.sass
+++ b/src/style.sass
@@ -10,4 +10,15 @@ a
     border: solid 1px black
     margin: 0 2px
     float: right
+.bgblanc
+    background-color: white
+.invisible
+    display: none
+.border-tiret
+    background-color: red
+
+.done
+    display: none
+.nodone
+    display: none
     
